# cocoa2

./: Cargo.toml
cocoa2/: Cargo.toml  Justfile
cocoa2/examples/: main.rs
cocoa2/src/: appkit.rs  base.rs  describe.rs  foundation.rs  geometry.rs  lib.rs  nsapplication.rs  nsautoreleasepool.rs  nsmenu.rs  nsmenuitem.rs  nsnumber.rs  nsprocessinfo.rs  nsrunningapplication.rs  nsstring.rs  nswindow.rs  prelude.rs
cocoa2_base/: Cargo.toml
cocoa2_base/src/: lib.rs
cocoa2_derive/: Cargo.toml
cocoa2_derive/src/: lib.rs
